<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgone"
    tools:context=".PlayerSetup">

    <TextView
        android:id="@+id/p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/ff"
        android:gravity="center_horizontal"
        android:text="@string/enter_your_name"
        android:textColor="#1E1D1F"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/p1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:fontFamily="serif"
        android:text="@string/player_1"
        android:textColor="#D61313"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/name1"
        app:layout_constraintStart_toStartOf="@+id/name1"
        app:layout_constraintTop_toBottomOf="@+id/p2"
        tools:ignore="UnknownId" />

    <EditText
        android:id="@+id/name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/p2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p1"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:fontFamily="serif"
        android:text="@string/player_2"
        android:textColor="#187EE4"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/name2"
        app:layout_constraintStart_toStartOf="@+id/name2"
        app:layout_constraintTop_toBottomOf="@+id/name1"
        tools:ignore="DuplicateIds,TextContrastCheck" />

    <EditText
        android:id="@+id/name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Name"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/play"
        app:layout_constraintStart_toStartOf="@+id/name1"
        app:layout_constraintTop_toBottomOf="@+id/p2"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/play"

        android:layout_width="218dp"
        android:layout_height="62dp"

        android:layout_marginBottom="156dp"
        android:background="@drawable/button"
        android:fontFamily="@font/dd"
        android:onClick="playGround"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/play"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name2"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>