<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgone"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/mypage"

        android:layout_width="105dp"
        android:layout_height="32dp"

        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/button2"
        android:fontFamily="@font/ff"
        android:onClick="myPage"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/dev_s_page"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TouchTargetSizeCheck,TextSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="138dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="331dp"
        android:fontFamily="@font/ff"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/tic_tac_toe_n_by_vedant_sensei"
        android:textColor="#1E1D1F"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/mypage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/play"

        android:layout_width="226dp"
        android:layout_height="75dp"

        android:layout_marginBottom="156dp"
        android:background="@drawable/button"
        android:fontFamily="@font/dd"
        android:onClick="playButton"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/let_s_start"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>